# poc-api-multi-language

./: .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yaml
conda/: dev.yaml
docker/: docker-compose.yaml  healthcheck.sh
docs/: conf.py  index.rst  make.bat
poc_api_multi_language/: __init__.py
python/api/: pyproject.toml
python/api/conda/: dev.yaml
python/api/pocapi/: __init__.py  settings.py  simple.py  storage.py
python/api/tests/: test_simple.py  test_storage.py
python/app/: README.md  pyproject.toml
python/app/pocapp/: __init__.py  main.py
python/app/pocapp/routers/: simple.py  storage.py
python/app/tests/: conftest.py  request.sh  test_storage.py
python/core/: pyproject.toml
python/core/poccore/: settings.py  simple.py  storage.py
python/core/tests/: __init__.py  conftest.py  test_simple.py  test_storage.py
r/api/: README.md
r/api/conda/: dev.yaml
r/api/src/: simple.R  storage.R
r/api/tests/: test_simple.R  test_storage.R
r/core/: README.md
tests/: __init__.py  test_poc-api-multi-language.py
