[tool.black]
line-length = 79
# note: for support "py39", we need to update black using poetry
#       currently, it has conflicts with typing-extensions
target-version = ["py38"]
force-exclude = """
(
  /(
      docs/*
    |.*\\.egg-info
  )/
)
"""

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]

[tool.poetry]
name = "pocapi"
version = "1.0.0"  # semantic-release
description = "PoC Multi-API"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "MIT license"
include = [
  "*.cfg",
  "*.ini",
  "*.js",
  "*.json",
  "*.lock",
  "*.md",
  "*.py",
  "*.sh",
  "*.rst",
  "*.txt",
  "*.toml",
  "*.yml",
  "*.yaml",
  ".github",
  "conda",
  "docker",
  "docs",
  ".dockerignore",
  ".env.tpl",
  ".gitignore",
  "Makefile",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.1"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22"
isort = "^5"
pre-commit = "2"
flake8 = "^4"
mypy = "^0.931"
pytest-cov = "^3.0.0"
mkdocs = ">=1.2.3,<2"
mkdocs-exclude = ">=1.0.2,<2"
mkdocs-jupyter = ">=0.20.0,<1"
mkdocs-literate-nav = ">=0.4.1,<1"
mkdocs-macros-plugin = ">=0.6.3,<1"
mkdocs-material = ">=8.2.1,<9"
mkdocstrings = ">=0.17.0,<0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
